src/objects/DRDW_Calender_Per_Roaster__c.object
<CustomObject>
    <description>To capture per day per roaster hours allocated</description>
    <fields>
        <fullName>Allocated_Date__c</fullName>
        <label>Allocated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocated_Hours__c</fullName>
        <label>Allocated Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <formula>if((DRDW_Roaster__r.Hours_Available_Per_Day__c != 0 ),(Allocated_Hours__c/DRDW_Roaster__r.Hours_Available_Per_Day__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DRDW_Roaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Roaster</label>
        <referenceTo>DRDW_Resource__c</referenceTo>
        <relationshipLabel>RDW Calender Per Roasters</relationshipLabel>
        <relationshipName>RDW_Calender_Per_Roasters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Over_Allocated__c</fullName>
        <description>true if the roaster is over allocated.</description>
        <formula>if(DRDW_Roaster__r.Hours_Available_Per_Day__c &lt; Allocated_Hours__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over Allocated</label>
        <type>Checkbox</type>
    </fields>
    <label>DRDW Calender Per Roaster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CALR-{000000}</displayFormat>
        <label>DRDW Calender Per Roaster Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Calender Per Roasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>